static/css/main.css
/** CSS that is configurable through the plugin settings are applied in Cards.html file. */
:root {
  --font-family: '__inter_5b82ff', '__inter_Fallback_5b82ff', Inter,
    ui-sans-serif, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol', 'Noto Color Emoji', system-ui;
  --font-size-normal: 1rem;
  --font-size-small: 0.9rem;
  --font-size-large: 1.4rem;
  --font-size-title: 1.5rem;
  --width-max: 780px;
  --width-min: 350px;
  --width-max-image: 720px;
}

/* ============================== Main ============================== */
body {
  font-family: var(--font-family);
  font-size: var(--font-size-normal);
  color: var(--body-text-color);
  line-height: 1.5;
  background-color: var(--body-background-color);
  margin-top: 30px;
}

h1 {
  font-size: 1.5rem;
}

h2 {
  font-size: 1.4rem;
}

h3 {
  font-size: 1.2rem;
}

.post-list-title {
  text-align: center;
}

.post-meta {
  font-size: var(--font-size-small);
  display: flex;
  justify-content: center;
  font-weight: 600;
}

.post-meta span {
  margin-right: 10px;
}

hr {
  border-top: 1px dashed var(--shadow-color);
}

/** Code */
pre {
  background-color: #272822;
  color: #f9f9f9;
  overflow: auto;
  padding: 15px;
  font-size: 16px;
}

/* ============================== Images ============================== */
img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

.post-content img {
  border-radius: 5px;
}

/* ============================== Links ============================== */
a,
a:visited {
  color: var(--body-accent-color);
  text-decoration: none;
}

a:hover,
a.site-header-title-link:hover {
  color: var(--body-accent-color);
  text-decoration: none;
}

/* ============================== Site Header ============================== */
.site-header {
  margin-top: 20px;
  max-width: var(--width-max);
  min-width: var(--width-min);
  margin: auto;
  text-align: center;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

.site-header-title,
.site-nav-link {
  padding: 10px;
}

.site-header-logo {
  order: 1;
}

.site-header-logo img {
  width: 80px;
}

.site-header-content {
  text-align: left;
  width: 100%;
  order: 2;
  text-align: center;
}

.site-header-row {
  margin-bottom: 5px;
}

/* ============================== Site Nav ============================== */
.site-nav {
  max-width: var(--width-max);
  min-width: var(--width-min);
  margin: 15px auto 15px auto;
  text-align: center;
}

a.site-nav-link,
a.site-nav-link:visited {
  font-size: var(--font-size-small);
  color: var(--body-accent-color);
  text-decoration: none;
  padding: 0 5px;
  margin: 0px;
  margin-left: -4px;
  text-transform: uppercase;
  font-weight: 500;
}

a.site-nav-link:hover {
  color: var(--hover-color);
}

a.site-header-title-link {
  font-size: var(--font-size-title);
  color: var(--body-text-color);
}

/* ============================== Categories ============================== */
div.archive_categories {
  display: flex;
  flex-flow: wrap;
  justify-content: center;
}

div.archive_categories p {
  margin: 5px;
}

div.archive_categories p a {
  color: var(--body-text-color);
  margin-right: 5px;
  background-color: var(--card-background-color);
  border: 1px solid var(--card-border-color);
  box-shadow: 0px 3px 5px 0px var(--shadow-color);
  font-size: var(--font-size-small);
  border-radius: 8px;
  padding: 5px 8px 5px 8px;
  white-space: nowrap;
}

div.archive_categories span {
  margin-right: 15px;
}

div.archive_categories p a:hover {
  color: white;
  background-color: var(--hover-color);
  border: 1px solid var(--body-text-color);
}

/* ============================== Site Content ============================== */
.page-content {
  max-width: var(--width-max);
  min-width: var(--width-min);
  margin: auto;
}

.post-list {
  padding: 0px;
  margin: 0px;
}

li.post-list-item,
.post,
li.h-entry,
p.h-entry,
div.photos-grid-container,
div.microblog_conversation {
  list-style: none;
  border-radius: 8px;
  padding: 30px;
  margin-top: 25px;
  box-shadow: var(--shadow-color) 0px 30px 30px -50px,
    var(--shadow-color) 0px 30px 30px -30px;
  background-color: var(--card-background-color);
  color: var(--card-text-color);
  border: 1px solid var(--card-border-color);
}

li.post-list-item a,
.post a,
li.h-entry a,
p.h-entry a,
div.photos-grid-container a {
  color: var(--card-accent-color);
}

li.post-list-item a:hover,
.post a:hover,
li.h-entry a:hover,
p.h-entry a:hover,
div.photos-grid-container a:hover {
  color: var(--hover-color);
}

.post-list img {
  display: block;
  margin: auto;
  margin-top: 15px;
}

.post-header {
  text-align: center;
  margin-bottom: 15px;
}

.post-list-item-title {
  display: block;
  text-align: center;
  font-size: var(--font-size-large);
}

a.post-list-item-title {
  color: var(--body-accent-color);
}

a.post-list-item-title:hover,
a.post-list-item-date:hover {
  color: var(--hover-color);
}

.post-list-item-date {
  display: block;
  text-align: center;
  font-size: var(--font-size-small);
}

a.post-list-item-date {
  color: var(--font-color-secondary);
}

/** Blockquotes */
blockquote {
  border-left: 4px solid var(--blockquote-border);
  border-right: 4px solid var(--blockquote-border);
  border-top: 1px solid var(--blockquote-border);
  border-bottom: 1px solid var(--blockquote-border);
  color: var(--blockquote-text);
  padding: 5px 15px 15px 15px;
  background-color: var(--blockquote);
  border-radius: 5px;
  margin-left: 0px;
  margin-right: 0px;
}

/** Conversation */
.microblog_post {
  margin-top: 20px;
  padding: 20px;
}

/* ============================== Response Options ============================== */
.response-options {
  margin-top: 30px;
  margin-bottom: 30px;
  display: flex;
  justify-content: center;
  flex-direction: row;
}

.response-options a,
.response-options .tinylytics_kudos {
  padding: 6px 8px 4px 8px;
  color: var(--card-text-color);
  border: 1px solid var(--card-border-color);
  font-size: var(--font-size-small);
  margin: 5px;
  border-radius: 8px;
  background-color: var(--card-background-color);
  white-space: nowrap;
}

.response-options a:hover,
.response-options button.tinylytics_kudos:hover {
  color: var(--body-accent-color);
}

.site-image {
  border-radius: 50px;
}

@media (max-width: 500px) {
  .response-options {
    flex-direction: column;
  }
}

/* ============================== Site Footer ============================== */
.site-footer {
  max-width: var(--width-max);
  min-width: var(--width-min);
  margin: auto;
  text-align: center;
  font-size: var(--font-size-small);
}

.rss-subscribe {
  text-align: center;
}

.rss-subscribe a {
  color: var(--body-accent-color);
}

.rss-subscribe a:hover {
  color: var(--hover-color);
}

/* ============================== Photos ============================== */
.photos-grid-container {
  grid-template-columns: 32% 32% 32%;
}

/* ============================== Forms ============================== */
input[type='email'],
input[type='text'] {
  box-sizing: border-box;
  border: 1px solid var(--shadow-color);
  border-radius: 5px;
  height: 35px;
  font-size: var(--font-size-normal);
  margin: 10px;
  padding: 10px;
}

input[id='q'],
input[id='input_search'],
input[type='search'],
input[type='q'] {
  box-sizing: border-box;
  border: 1px solid var(--shadow-color);
  border-radius: 5px;
  height: 35px;
  font-size: var(--font-size-normal);
  display: inline;
  margin: 10px;
  padding: 10px;
}

textarea[name='message'] {
  box-sizing: border-box;
  border: 1px solid var(--shadow-color);
  border-radius: 5px;
  height: 200px;
  font-size: var(--font-size-normal);
  margin: 10px;
  padding: 10px;
}

form input[type='submit'],
form button {
  background-color: var(--body-accent-color);
  border: 0;
  padding: 8px;
  border-radius: 5px;
  color: white;
  min-width: 100px;
  height: 35px;
  font-size: var(--font-size-normal);
}

/* ============================== Pagination ============================== */
.pagination {
  text-align: center;
  padding: 30px 0px 10px 0px;
}

.pagination .prev,
.pagination .next {
  padding: 30px;
}

.pagination .prev a:hover,
.pagination .next a:hover {
  color: var(--hover-color);
}

